--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,7 @@
         }
     ],
     "require": {
-        "symfony/http-foundation": ">=2.1,<2.5",
-        "imagine/imagine": "v0.5.0",
-        "symfony/filesystem": ">=2.1,<2.5",
-        "pimple/pimple": "2.0.*",
-        "psr/log": "1.0.0"
+        "jbroadway/urlify": ">=1.0.0,<1.1.0"
     },
     "autoload": {
     	"psr-0": { "ZineInc\\Storage\\": "src/" }
