add description and keywords to composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "name": "floppy/common",
+    "description": "Floppy is a file storage library. This library contains shared code for FloppyServer, FloppyClient and FloppyBundle libraries.",
+    "keywords": ["filesystem", "file", "file storage", "file upload", "image"],
     "license": "MIT",
     "authors": [
         {
